[package]
name = "ldk-sample"
version = "0.1.0"
authors = ["Valentine Wallace <vwallace@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#lightning = { version = "0.0.115", features = ["max_level_trace"] }
#lightning-block-sync = { version = "0.0.115", features = [ "rpc-client" ] }
#lightning-invoice = { version = "0.23" }
#lightning-net-tokio = { version = "0.0.115" }
#lightning-persister = { version = "0.0.115" }
#lightning-background-processor = { version = "0.0.115", features = [ "futures" ] }
#lightning-rapid-gossip-sync = { version = "0.0.115" }

#lightning = { git = "https://github.com/lightningdevkit/rust-lightning", rev="0d1072b7c3fb5366742473c38069c421cdd60b87", features = ["max_level_trace"] }
#lightning-block-sync = { git = "https://github.com/lightningdevkit/rust-lightning", rev="0d1072b7c3fb5366742473c38069c421cdd60b87", features = [ "rpc-client" ] }
#lightning-invoice = { git = "https://github.com/lightningdevkit/rust-lightning", rev="0d1072b7c3fb5366742473c38069c421cdd60b87"}
#lightning-net-tokio = { git = "https://github.com/lightningdevkit/rust-lightning", rev="0d1072b7c3fb5366742473c38069c421cdd60b87" }
#lightning-persister = { git = "https://github.com/lightningdevkit/rust-lightning", rev="0d1072b7c3fb5366742473c38069c421cdd60b87" }
#lightning-background-processor = { git = "https://github.com/lightningdevkit/rust-lightning", rev="0d1072b7c3fb5366742473c38069c421cdd60b87", features = [ "futures" ] }
#lightning-rapid-gossip-sync = { git = "https://github.com/lightningdevkit/rust-lightning", rev="0d1072b7c3fb5366742473c38069c421cdd60b87" }

lightning = { git = "https://github.com/tnull/rust-lightning", branch = "2023-07-expose-default-message-router", features = ["max_level_trace"] }
lightning-block-sync = { git = "https://github.com/tnull/rust-lightning", branch = "2023-07-expose-default-message-router", features = ["rpc-client"] }
lightning-invoice = { git = "https://github.com/tnull/rust-lightning", branch = "2023-07-expose-default-message-router"}
lightning-net-tokio = { git = "https://github.com/tnull/rust-lightning", branch = "2023-07-expose-default-message-router" }
lightning-persister = { git = "https://github.com/tnull/rust-lightning", branch = "2023-07-expose-default-message-router" }
lightning-background-processor = { git = "https://github.com/tnull/rust-lightning", branch = "2023-07-expose-default-message-router", features = ["futures"] }
lightning-rapid-gossip-sync = { git = "https://github.com/tnull/rust-lightning", branch = "2023-07-expose-default-message-router"}

base64 = "0.13.0"
bitcoin = "0.29.0"
bitcoin-bech32 = "0.12"
bech32 = "0.8"
hex = "0.3"
libc = "0.2"

chrono = "0.4"
rand = "0.4"
serde_json = { version = "1.0" }
tokio = { version = "1", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
